--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -175,16 +175,19 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label Grid.Row="1" Grid.Column="0" Content="Name:"/>
                         <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Text="{Binding DisplayName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         <Label Grid.Row="2" Grid.Column="0" Content="Dampeners:"/>
                         <CheckBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Dampeners, Mode=TwoWay}" />
-                        <Label Grid.Row="3" Grid.Column="0" Content="Position:"/>
-                        <views:ControlPosition Grid.Row="3" Grid.Column="1"/>
+                        <Label Grid.Row="3" Grid.Column="0" Content="Destructible:"/>
+                        <CheckBox Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Destructible, Mode=TwoWay}" />
+                        <Label Grid.Row="4" Grid.Column="0" Content="Position:"/>
+                        <views:ControlPosition Grid.Row="4" Grid.Column="1"/>
 
-                        <Button Grid.Column="0" Grid.Row="4" Margin="4 0 4 0" HorizontalAlignment="Left" Content="Damage:" Style="{StaticResource DropDownMenuButton}">
+                        <Button Grid.Column="0" Grid.Row="5" Margin="4 0 4 0" HorizontalAlignment="Left" Content="Damage:" Style="{StaticResource DropDownMenuButton}">
                             <i:Interaction.Behaviors>
                                 <commands:ButtonDropDownMenuBehavior />
                             </i:Interaction.Behaviors>
@@ -199,9 +202,9 @@
                             </Button.ContextMenu>
                         </Button>
 
-                        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Text="{Binding DamageCount}" />
+                        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding DamageCount}" />
 
-                        <Button Grid.Column="0" Grid.Row="5" Margin="4 0 4 0" HorizontalAlignment="Left" Content="Speed:" Style="{StaticResource DropDownMenuButton}">
+                        <Button Grid.Column="0" Grid.Row="6" Margin="4 0 4 0" HorizontalAlignment="Left" Content="Speed:" Style="{StaticResource DropDownMenuButton}">
                             <i:Interaction.Behaviors>
                                 <commands:ButtonDropDownMenuBehavior />
                             </i:Interaction.Behaviors>
@@ -235,7 +238,7 @@
                                 </ContextMenu>
                             </Button.ContextMenu>
                         </Button>
-                        <Grid Grid.Row="5" Grid.Column="1">
+                        <Grid Grid.Row="6" Grid.Column="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
@@ -243,13 +246,13 @@
                             <TextBlock Grid.Column="0" VerticalAlignment="Center" Text="{Binding LinearVelocity, StringFormat='{}{0:#,###0.000} m/s'}" ToolTip="Linear Velocity" />
                             <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="{Binding AngularVelocity, StringFormat='{}{0:#,###0.000} m/s'}" ToolTip="Approximate Angular Velocity" Margin="8,0,0,0" />
                         </Grid>
-                        <Separator Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"/>
-                        <TextBlock Grid.Row="7" Grid.Column="0" Margin="4 0 4 0" Text="Piloted:"/>
-                        <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPiloted}" />
-                        <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Distance:"/>
-                        <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
-                        <TextBlock Grid.Row="9" Grid.Column="0" Margin="4 0 4 0" Text="Scale:"/>
-                        <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center">
+                        <Separator Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"/>
+                        <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Piloted:"/>
+                        <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPiloted}" />
+                        <TextBlock Grid.Row="9" Grid.Column="0" Margin="4 0 4 0" Text="Distance:"/>
+                        <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
+                        <TextBlock Grid.Row="10" Grid.Column="0" Margin="4 0 4 0" Text="Scale:"/>
+                        <TextBlock Grid.Row="10" Grid.Column="1" VerticalAlignment="Center">
                             <TextBlock.Text>
                                 <MultiBinding StringFormat="{}{0} × {1} × {2} blocks">
                                     <Binding Path="Scale.X" />
@@ -258,8 +261,8 @@
                                 </MultiBinding>
                             </TextBlock.Text>
                         </TextBlock>
-                        <TextBlock Grid.Row="10" Grid.Column="0" Margin="4 0 4 0" Text="Size:"/>
-                        <TextBlock Grid.Row="10" Grid.Column="1" VerticalAlignment="Center">
+                        <TextBlock Grid.Row="11" Grid.Column="0" Margin="4 0 4 0" Text="Size:"/>
+                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center">
                             <TextBlock.Text>
                                 <MultiBinding StringFormat="{}{0}m × {1}m × {2}m">
                                     <Binding Path="Size.Width" />
@@ -268,8 +271,8 @@
                                 </MultiBinding>
                             </TextBlock.Text>
                         </TextBlock>
-                        <TextBlock Grid.Row="11" Grid.Column="0" Margin="4 0 4 0" Text="Center:"/>
-                        <TextBlock Grid.Row="11" Grid.Column="1" VerticalAlignment="Center">
+                        <TextBlock Grid.Row="12" Grid.Column="0" Margin="4 0 4 0" Text="Center:"/>
+                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center">
                             <TextBlock.Text>
                                 <MultiBinding StringFormat="{}{0:#,##0.0000}, {1:#,##0.0000}, {2:#,##0.0000}">
                                     <Binding Path="Center.X" />
@@ -278,12 +281,12 @@
                                 </MultiBinding>
                             </TextBlock.Text>
                         </TextBlock>
-                        <TextBlock Grid.Row="12" Grid.Column="0" Margin="4 0 4 0" Text="Mass:"/>
-                        <TextBlock Grid.Row="12" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
-                        <TextBlock Grid.Row="13" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
-                        <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
-                        <TextBlock Grid.Row="14" Grid.Column="0" Margin="4 0 4 0" Text="Cockpit Orientation:"/>
-                        <TextBlock Grid.Row="14" Grid.Column="1" VerticalAlignment="Center" Text="{Binding CockpitOrientation}" />
+                        <TextBlock Grid.Row="13" Grid.Column="0" Margin="4 0 4 0" Text="Mass:"/>
+                        <TextBlock Grid.Row="13" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
+                        <TextBlock Grid.Row="14" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
+                        <TextBlock Grid.Row="14" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
+                        <TextBlock Grid.Row="15" Grid.Column="0" Margin="4 0 4 0" Text="Cockpit Orientation:"/>
+                        <TextBlock Grid.Row="15" Grid.Column="1" VerticalAlignment="Center" Text="{Binding CockpitOrientation}" />
                     </Grid>
                 </DockPanel>
             </TabItem>
