Fixed mouse scrolling in Construction tab. Added Velocity column to main display.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -466,6 +466,9 @@
                 <Grid>
                     <ScrollViewer>
                         <Grid>
+                            <i:Interaction.Behaviors>
+                                <commands:BubbleScrollBehavior />
+                            </i:Interaction.Behaviors>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition/>
