Updated #14 Added structures for displaying Replicable entity, with the display name. Inventory has not been added yet.

--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -458,6 +458,9 @@
                             <DataTemplate DataType="{x:Type vm:StructureMeteorViewModel}">
                                 <views:ControlMeteor />
                             </DataTemplate>
+                            <DataTemplate DataType="{x:Type vm:StructureReplicableViewModel}">
+                                <views:ControlReplicable />
+                            </DataTemplate>
                             <DataTemplate DataType="{x:Type vm:StructureUnknownViewModel}">
                                 <views:ControlUnknown />
                             </DataTemplate>
